--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "vite": "^3.0.7"
   },
   "dependencies": {
+    "@material-design-icons/font": "^0.12.1",
     "destyle.css": "^3.0.2",
     "sass": "^1.54.8"
   }
