perf(webp): 画像をWebPに変換する (#3)

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fix:stylelint": "stylelint '**/*.{css,scss}' --cache --fix",
     "fix:markuplint": "markuplint '**/*.html' --fix",
     "fix:prettier": "prettier '**/*.@(cjs|css|scss|html)' --write",
+    "optimize": "node ./scripts/sharp.mjs ./public",
     "prepare": "husky install",
     "preinstall": "npx only-allow pnpm"
   },
@@ -31,12 +32,14 @@
     "@markuplint/html-parser": "^2.2.2",
     "@markuplint/html-spec": "^2.8.0",
     "@types/node": "^18.7.13",
+    "@types/sharp": "^0.31.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "markuplint": "^2.10.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
+    "sharp": "^0.31.0",
     "stylelint": "^14.11.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recess-order": "^3.0.0",
